packages/flutter_wasmit/ios/Classes/frb.h

typedef struct _Dart_Handle* Dart_Handle;
typedef struct DartCObject DartCObject;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_ArcStdSyncMutexModule {
  const void *ptr;
} wire_ArcStdSyncMutexModule;
typedef struct wire_CompiledModule {
  struct wire_ArcStdSyncMutexModule field0;
} wire_CompiledModule;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_StringList {
  struct wire_uint_8_list **ptr;
  int32_t len;
} wire_StringList;
typedef struct wire_list_env_variable {
  struct wire_EnvVariable *ptr;
  int32_t len;
} wire_list_env_variable;
typedef struct wire_list_preopened_dir {
  struct wire_PreopenedDir *ptr;
  int32_t len;
} wire_list_preopened_dir;
typedef struct wire_WasiConfigNative {
  bool capture_stdout;
  bool capture_stderr;
  bool inherit_stdin;
  bool inherit_env;
  bool inherit_args;
  struct wire_StringList *args;
  struct wire_list_env_variable *env;
  struct wire_StringList *preopened_files;
  struct wire_list_preopened_dir *preopened_dirs;
} wire_WasiConfigNative;
typedef struct wire_ModuleConfigWasmi {
  struct wire_WasiStackLimits *stack_limits;
  uintptr_t *cached_stacks;
  bool *mutable_global;
  bool *sign_extension;
  bool *saturating_float_to_int;
  bool *tail_call;
  bool *extended_const;
  bool *floats;
} wire_ModuleConfigWasmi;
typedef struct wire_ModuleConfigWasmtime {
  bool *debug_info;
  bool *wasm_backtrace;
  bool *native_unwind_info;
  uintptr_t *max_wasm_stack;
  bool *wasm_threads;
  bool *wasm_simd;
  bool *wasm_relaxed_simd;
  bool *relaxed_simd_deterministic;
  bool *wasm_multi_memory;
  bool *wasm_memory64;
  uint64_t *static_memory_maximum_size;
  bool *static_memory_forced;
  uint64_t *static_memory_guard_size;
  bool *parallel_compilation;
  bool *generate_address_map;
} wire_ModuleConfigWasmtime;
typedef struct wire_ModuleConfig {
  bool *multi_value;
  bool *bulk_memory;
  bool *reference_types;
  bool *consume_fuel;
  struct wire_ModuleConfigWasmi *wasmi;
  struct wire_ModuleConfigWasmtime *wasmtime;
} wire_ModuleConfig;
typedef struct wire_WasmitInstanceId {
  uint32_t field0;
} wire_WasmitInstanceId;
typedef struct wire_WasmitModuleId {
  uint32_t field0;
} wire_WasmitModuleId;
typedef struct wire_RwLockSharedMemory {
  const void *ptr;
} wire_RwLockSharedMemory;
typedef struct wire_WasmitSharedMemory {
  struct wire_RwLockSharedMemory field0;
} wire_WasmitSharedMemory;
typedef struct wire_ModuleImport {
  struct wire_uint_8_list *module;
  struct wire_uint_8_list *name;
  struct wire_ExternalValue value;
} wire_ModuleImport;
typedef struct wire_list_module_import {
  struct wire_ModuleImport *ptr;
  int32_t len;
} wire_list_module_import;
typedef union WasmValKind {
  struct wire_WasmVal_i32 *i32;
  struct wire_WasmVal_i64 *i64;
  struct wire_WasmVal_f32 *f32;
  struct wire_WasmVal_f64 *f64;
  struct wire_WasmVal_v128 *v128;
  struct wire_WasmVal_funcRef *funcRef;
  struct wire_WasmVal_externRef *externRef;
} WasmValKind;
typedef struct wire_WasmVal {
  int32_t tag;
  union WasmValKind *kind;
} wire_WasmVal;
void store_dart_post_cobject(DartPostCObjectFnType ptr);
Dart_Handle get_dart_object(uintptr_t ptr);
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
WireSyncReturn wire_module_builder(struct wire_CompiledModule *module,
                                   uintptr_t *num_threads,
                                   struct wire_WasiConfigNative *wasi_config);
void wire_parse_wat_format(int64_t port_, struct wire_uint_8_list *wat);
void wire_compile_wasm(int64_t port_,
                       struct wire_uint_8_list *module_wasm,
                       struct wire_ModuleConfig *config);
WireSyncReturn wire_compile_wasm_sync(struct wire_uint_8_list *module_wasm,
                                      struct wire_ModuleConfig *config);
WireSyncReturn wire_wasm_features_for_config(struct wire_ModuleConfig *config);
WireSyncReturn wire_wasm_runtime_features(void);
WireSyncReturn wire_exports__method__WasmitInstanceId(struct wire_WasmitInstanceId *that);
WireSyncReturn wire_instantiate_sync__method__WasmitModuleId(struct wire_WasmitModuleId *that);
void wire_instantiate__method__WasmitModuleId(int64_t port_, struct wire_WasmitModuleId *that);
WireSyncReturn wire_link_imports__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                         struct wire_list_module_import *imports);
void wire_stdio_stream__method__WasmitModuleId(int64_t port_,
                                               struct wire_WasmitModuleId *that,
                                               int32_t kind);
void wire_dispose__method__WasmitModuleId(int64_t port_, struct wire_WasmitModuleId *that);
union WasmValKind *inflate_WasmVal_i32(void);
union WasmValKind *inflate_WasmVal_i64(void);
union WasmValKind *inflate_WasmVal_f32(void);
union WasmValKind *inflate_WasmVal_f64(void);
union WasmValKind *inflate_WasmVal_v128(void);
union WasmValKind *inflate_WasmVal_funcRef(void);
union WasmValKind *inflate_WasmVal_externRef(void);