packages/wasmit/lib/src/bridge_generated.io.dart


  void _api_fill_to_wire_wasm_val(WasmVal apiObj, wire_WasmVal wireObj) {
    if (apiObj is WasmVal_i32) {
      var pre_field0 = api2wire_i32(apiObj.field0);
      wireObj.tag = 0;
      wireObj.kind = inner.inflate_WasmVal_i32();
      wireObj.kind.ref.i32.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is WasmVal_i64) {
      var pre_field0 = api2wire_i64(apiObj.field0);
      wireObj.tag = 1;
      wireObj.kind = inner.inflate_WasmVal_i64();
      wireObj.kind.ref.i64.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is WasmVal_f32) {
      var pre_field0 = api2wire_f32(apiObj.field0);
      wireObj.tag = 2;
      wireObj.kind = inner.inflate_WasmVal_f32();
      wireObj.kind.ref.f32.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is WasmVal_f64) {
      var pre_field0 = api2wire_f64(apiObj.field0);
      wireObj.tag = 3;
      wireObj.kind = inner.inflate_WasmVal_f64();
      wireObj.kind.ref.f64.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is WasmVal_v128) {
      var pre_field0 = api2wire_u8_array_16(apiObj.field0);
      wireObj.tag = 4;
      wireObj.kind = inner.inflate_WasmVal_v128();
      wireObj.kind.ref.v128.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is WasmVal_funcRef) {
      var pre_field0 = api2wire_opt_box_autoadd_WFunc(apiObj.field0);
      wireObj.tag = 5;
      wireObj.kind = inner.inflate_WasmVal_funcRef();
      wireObj.kind.ref.funcRef.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is WasmVal_externRef) {
      var pre_field0 = api2wire_opt_box_autoadd_u32(apiObj.field0);
      wireObj.tag = 6;
      wireObj.kind = inner.inflate_WasmVal_externRef();
      wireObj.kind.ref.externRef.ref.field0 = pre_field0;
      return;
    }
  }

  void _api_fill_to_wire_wasmit_instance_id(
      WasmitInstanceId apiObj, wire_WasmitInstanceId wireObj) {
    wireObj.field0 = api2wire_u32(apiObj.field0);
  }

  void _api_fill_to_wire_wasmit_module_id(
      WasmitModuleId apiObj, wire_WasmitModuleId wireObj) {
    wireObj.field0 = api2wire_u32(apiObj.field0);
  }

  void _api_fill_to_wire_wasmit_shared_memory(
      WasmitSharedMemory apiObj, wire_WasmitSharedMemory wireObj) {
    wireObj.field0 = api2wire_RwLockSharedMemory(apiObj.field0);
  }
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class WasmitDartWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  WasmitDartWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  WasmitDartWire.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
          'store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>(
          'get_dart_object');
  late final _get_dart_object =
      _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          'drop_dart_object');
  late final _drop_dart_object =
      _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr =
      _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>(
          'new_dart_opaque');
  late final _new_dart_opaque =
      _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  WireSyncReturn wire_module_builder(
    ffi.Pointer<wire_CompiledModule> module,
    ffi.Pointer<wire_WasiConfigNative> wasi_config,
  ) {
    return _wire_module_builder(
      module,
      wasi_config,
    );
  }

  late final _wire_module_builderPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>,
              ffi.Pointer<wire_WasiConfigNative>)>>('wire_module_builder');
  late final _wire_module_builder = _wire_module_builderPtr.asFunction<
      WireSyncReturn Function(ffi.Pointer<wire_CompiledModule>,
          ffi.Pointer<wire_WasiConfigNative>)>();

  void wire_parse_wat_format(
    int port_,
    ffi.Pointer<wire_uint_8_list> wat,
  ) {
    return _wire_parse_wat_format(
      port_,
      wat,
    );
  }

  late final _wire_parse_wat_formatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_parse_wat_format');
  late final _wire_parse_wat_format = _wire_parse_wat_formatPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_compile_wasm(
    int port_,
    ffi.Pointer<wire_uint_8_list> module_wasm,
    ffi.Pointer<wire_ModuleConfig> config,
  ) {
    return _wire_compile_wasm(
      port_,
      module_wasm,
      config,
    );
  }

  late final _wire_compile_wasmPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>,
              ffi.Pointer<wire_ModuleConfig>)>>('wire_compile_wasm');
  late final _wire_compile_wasm = _wire_compile_wasmPtr.asFunction<
      void Function(int, ffi.Pointer<wire_uint_8_list>,
          ffi.Pointer<wire_ModuleConfig>)>();

  WireSyncReturn wire_compile_wasm_sync(
    ffi.Pointer<wire_uint_8_list> module_wasm,
    ffi.Pointer<wire_ModuleConfig> config,
  ) {
    return _wire_compile_wasm_sync(
      module_wasm,
      config,
    );
  }

  late final _wire_compile_wasm_syncPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_uint_8_list>,
              ffi.Pointer<wire_ModuleConfig>)>>('wire_compile_wasm_sync');
  late final _wire_compile_wasm_sync = _wire_compile_wasm_syncPtr.asFunction<
      WireSyncReturn Function(
          ffi.Pointer<wire_uint_8_list>, ffi.Pointer<wire_ModuleConfig>)>();

  WireSyncReturn wire_wasm_features_for_config(
    ffi.Pointer<wire_ModuleConfig> config,
  ) {
    return _wire_wasm_features_for_config(
      config,
    );
  }

  late final _wire_wasm_features_for_configPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_ModuleConfig>)>>(
      'wire_wasm_features_for_config');
  late final _wire_wasm_features_for_config = _wire_wasm_features_for_configPtr
      .asFunction<WireSyncReturn Function(ffi.Pointer<wire_ModuleConfig>)>();

  WireSyncReturn wire_wasm_runtime_features() {
    return _wire_wasm_runtime_features();
  }

  late final _wire_wasm_runtime_featuresPtr =
      _lookup<ffi.NativeFunction<WireSyncReturn Function()>>(
          'wire_wasm_runtime_features');
  late final _wire_wasm_runtime_features =
      _wire_wasm_runtime_featuresPtr.asFunction<WireSyncReturn Function()>();

  WireSyncReturn wire_exports__method__WasmitInstanceId(
    ffi.Pointer<wire_WasmitInstanceId> that,
  ) {
    return _wire_exports__method__WasmitInstanceId(
      that,
    );
  }

  late final _wire_exports__method__WasmitInstanceIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitInstanceId>)>>(
      'wire_exports__method__WasmitInstanceId');
  late final _wire_exports__method__WasmitInstanceId =
      _wire_exports__method__WasmitInstanceIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitInstanceId>)>();

  WireSyncReturn wire_instantiate_sync__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
  ) {
    return _wire_instantiate_sync__method__WasmitModuleId(
      that,
    );
  }

  late final _wire_instantiate_sync__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>)>>(
      'wire_instantiate_sync__method__WasmitModuleId');
  late final _wire_instantiate_sync__method__WasmitModuleId =
      _wire_instantiate_sync__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>)>();

  void wire_instantiate__method__WasmitModuleId(
    int port_,
    ffi.Pointer<wire_WasmitModuleId> that,
  ) {
    return _wire_instantiate__method__WasmitModuleId(
      port_,
      that,
    );
  }

  late final _wire_instantiate__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmitModuleId>)>>(
      'wire_instantiate__method__WasmitModuleId');
  late final _wire_instantiate__method__WasmitModuleId =
      _wire_instantiate__method__WasmitModuleIdPtr
          .asFunction<void Function(int, ffi.Pointer<wire_WasmitModuleId>)>();

  WireSyncReturn wire_link_imports__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    ffi.Pointer<wire_list_module_import> imports,
  ) {
    return _wire_link_imports__method__WasmitModuleId(
      that,
      imports,
    );
  }

  late final _wire_link_imports__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  ffi.Pointer<wire_list_module_import>)>>(
      'wire_link_imports__method__WasmitModuleId');
  late final _wire_link_imports__method__WasmitModuleId =
      _wire_link_imports__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              ffi.Pointer<wire_list_module_import>)>();

  void wire_stdio_stream__method__WasmitModuleId(
    int port_,
    ffi.Pointer<wire_WasmitModuleId> that,
    int kind,
  ) {
    return _wire_stdio_stream__method__WasmitModuleId(
      port_,
      that,
      kind,
    );
  }

  late final _wire_stdio_stream__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmitModuleId>,
              ffi.Int32)>>('wire_stdio_stream__method__WasmitModuleId');
  late final _wire_stdio_stream__method__WasmitModuleId =
      _wire_stdio_stream__method__WasmitModuleIdPtr.asFunction<
          void Function(int, ffi.Pointer<wire_WasmitModuleId>, int)>();

  void wire_dispose__method__WasmitModuleId(
    int port_,
    ffi.Pointer<wire_WasmitModuleId> that,
  ) {
    return _wire_dispose__method__WasmitModuleId(
      port_,
      that,
    );
  }
